Upgrade versions of various dependencies
Most notably this commit updates Hibernate to 4.3.1.

--- a/test/integration-tests/build.gradle
+++ b/test/integration-tests/build.gradle
@@ -45,10 +45,10 @@ dependencies {
     testCompile "org.springframework:spring-test:$springVersion",
                 "org.springframework:spring-aop:$springVersion",
                 "org.springframework:spring-expression:$springVersion",
-                "org.hibernate:hibernate:3.2.6.ga",
-                "aspectj:aspectjrt:1.5.3",
-                "aspectj:aspectjweaver:1.5.3",
-                "hsqldb:hsqldb:1.8.0.7",
+                "org.hibernate:hibernate-core:4.3.1.Final",
+                "org.aspectj:aspectjrt:1.8.0.M1",
+                "org.aspectj:aspectjweaver:1.8.0.M1",
+                "org.hsqldb:hsqldb:2.3.2",
                 "junit:junit:$junitVersion",
                 "org.springframework.security:spring-security-config:$springSecurityVersion",
                 "org.slf4j:slf4j-log4j12:$slf4jVersion"
