--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -4,18 +4,18 @@ apply plugin: 'propdeps'
 sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
 
-ext.springVersion = '3.2.8.RELEASE'
-ext.springDataVersion = '1.6.1.RELEASE'
-ext.springBatchVersion = '2.0.4.RELEASE'
-ext.junitVersion =  '4.10'
-ext.commonsPoolVersion = '1.5.4'
-ext.commonsLangVersion = '2.4'
-ext.commonsLoggingVersion = '1.1.1'
+ext.springVersion = '4.0.3.DEPENDENCIES'
+ext.springDataVersion = '1.8.0.DEPENDENCIES'
+ext.springBatchVersion = '3.0.0.DEPENDENCIES'
+ext.junitVersion =  '4.11'
+ext.commonsPoolVersion = '1.6'
+ext.commonsLangVersion = '2.6'
+ext.commonsLoggingVersion = '1.1.3'
 ext.gsbaseVersion = '2.0.1'
-ext.log4jVersion = '1.2.15'
+ext.log4jVersion = '1.2.17'
 ext.mockitoVersion = '1.9.5'
 ext.queryDslVersion = '3.2.4'
-ext.slf4jVersion = '1.7.5'
+ext.slf4jVersion = '1.7.6'
 ext.powerMockVersion = '1.5.1'
 
 ext.powerMockDependencies = [
@@ -29,4 +29,6 @@ ext.powerMockDependencies = [
 
 repositories {
     mavenCentral()
+    maven { url "http://repo.spring.io/milestone" }  // for AspectJ 1.8.0.M1
+    mavenLocal()
 }
